--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
 $color: #F7F06D;
 
-.wrapper{
+.wrapper {
     width: 100vw;
     height: 100vh;
     background-color: #1b1b1b;
@@ -18,155 +20,222 @@ $color: #F7F06D;
     grid-gap: 50px;
     justify-content: center;
 }
-.block{
+
+.block {
     border-radius: 15px;
     background-color: #2b2b2b;
     width: 100%;
     height: 100%;
     padding: 20px 20px;
-    box-shadow: 0px 0px 20px 4px rgba(0,0,0,0.75);
-    h2{
+    box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.75);
+
+    h2 {
         color: white;
         width: 100%;
         margin-top: 5px;
         height: 10%;
         text-align: center;
     }
-    p{
+
+    p {
         font-size: 0.8em;
         color: white;
         opacity: 0.7;
-        
+
     }
 }
-.bitcoin-chart{
+
+.bitcoin-chart {
     height: 85%;
-    .ct-series-a .ct-line{
+
+    .ct-series-a .ct-line {
         stroke: $color;
     }
-    .ct-series-a .ct-point{
+
+    .ct-series-a .ct-point {
         stroke: $color;
     }
-    .ct-area{
+
+    .ct-area {
         fill: $color;
     }
-    .ct-legend{
+
+    .ct-legend {
         display: flex;
-    width: 100%;
-    justify-content: space-around;
-    color: white;
+        width: 100%;
+        justify-content: space-around;
+        color: white;
     }
-    .ct-line{
+
+    .ct-line {
         stroke-dasharray: 5px;
         animation: dashoffset 2s linear infinite;
     }
+
     span.ct-label.ct-horizontal.ct-end {
         font-size: 0.5em;
     }
 
+    text.ct-label {
+        fill: $color;
+        font-size: 0.7em;
+    }
 }
-.bar-chart{
+
+.bar-chart {
     height: 85%;
-    .ct-bar{
+
+    .ct-bar {
         stroke-width: 45px;
     }
-    .ct-series-a line{
+
+    .ct-series-a line {
         stroke: $color;
         animation: ctSeriesAGlow 3s linear infinite;
     }
-    .ct-series-b line{
+
+    .ct-series-b line {
         stroke: #FAF59E;
         animation: ctSeriesBGlow 3s linear infinite;
     }
-    .ct-series-c line{
+
+    .ct-series-c line {
         stroke: #FCF9C5;
         animation: ctSeriesCGlow 3s linear infinite;
     }
 
 }
+
 @keyframes ctSeriesAGlow {
-    0%,100% {
-        filter: drop-shadow( 0px 0px 10px rgba(247, 240, 109, 0.2));
+
+    0%,
+    100% {
+        filter: drop-shadow(0px 0px 10px rgba(247, 240, 109, 0.2));
     }
+
     50% {
-        filter: drop-shadow( 0px 0px 10px rgba(247, 240, 109, 1));
+        filter: drop-shadow(0px 0px 10px rgba(247, 240, 109, 1));
     }
 }
+
 @keyframes ctSeriesBGlow {
-    0%,100% {
-        filter: drop-shadow( 0px 0px 10px rgba(250, 245, 158, 0.2));
+
+    0%,
+    100% {
+        filter: drop-shadow(0px 0px 10px rgba(250, 245, 158, 0.2));
     }
+
     50% {
-        filter: drop-shadow( 0px 0px 10px rgba(250, 245, 158, 1));
+        filter: drop-shadow(0px 0px 10px rgba(250, 245, 158, 1));
     }
 }
+
 @keyframes ctSeriesCGlow {
-    0%,100% {
-        filter: drop-shadow( 0px 0px 10px rgba(252, 249, 197, 0.2));
+
+    0%,
+    100% {
+        filter: drop-shadow(0px 0px 10px rgba(252, 249, 197, 0.2));
     }
+
     50% {
-        filter: drop-shadow( 0px 0px 10px rgba(252, 249, 197, 1));
+        filter: drop-shadow(0px 0px 10px rgba(252, 249, 197, 1));
     }
 }
+
 @keyframes dashoffset {
     0% {
         stroke-dashoffset: 0;
     }
+
     100% {
         stroke-dashoffset: -20px;
     }
 }
-.ct-label{
+
+.ct-label {
     color: white;
 }
-@media(max-width: 940px){
-    .wrapper{
+
+@media(max-width: 940px) {
+    .wrapper {
         width: auto;
         height: auto;
         grid-template-columns: 90vw;
-        grid-template-rows: repeat(4,60vh);
+        grid-template-rows: repeat(4, 60vh);
     }
 }
+
 //chartist
 
 
 //chartist plugin
 
-li{
+li {
     list-style-type: none;
 }
-.ct-legend .ct-series-1::before{
+
+.ct-legend .ct-series-1::before {
     cursor: pointer;
 }
+
 //timer
-.timer{
+.timer {
     position: fixed;
     right: 20px;
     bottom: 20px;
-    width: 100px;
-    height: 100px;
-    background-color: rgb(235, 235, 235);
-    box-shadow: 0px 0px 5px 4px rgba(235, 235, 235,0.75);
+    width: 80px;
+    height: 80px;
+    opacity: 0.5;
+    background-color: rgb(10, 10, 10);
+    box-shadow: 0px 0px 5px 4px rgba(10, 10, 10, 0.75);
     border-radius: 50%;
-    border: 2px solid rgb(235, 235, 235);
+    border: 2px solid rgb(10, 10, 10);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     animation: MoveUpDown 4s ease infinite;
-    p{
-        font-size: 0.7em;
+
+    p {
+        font-size: 0.6em;
     }
-    span{
-        font-size: 0.9em;
+
+    span {
+        font-size: 0.7em;
         margin-top: 5px;
     }
+    p,span{
+        color: $color;
+    }
 }
+
 @keyframes MoveUpDown {
-    0%, 100% {
-      bottom: 20px;
+
+    0%,
+    100% {
+        bottom: 20px;
     }
+
     50% {
-      bottom: 50px;
+        bottom: 50px;
     }
-  }
+}
+
+hr {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border-color: $color;
+    border-width: 2px;
+    animation: hrLine 30s linear infinite;
+}
+@keyframes hrLine {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
