--- a/style.css
+++ b/style.css
@@ -1,2 +1,213 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");*{-webkit-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;font-family:'Roboto', sans-serif}.wrapper{width:100vw;height:100vh;background-color:#1b1b1b;display:-ms-grid;display:grid;-ms-grid-columns:35vw 55vw;grid-template-columns:35vw 55vw;-ms-grid-rows:40vh 40vh;grid-template-rows:40vh 40vh;padding:50px;grid-gap:50px;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.block{border-radius:15px;background-color:#2b2b2b;width:100%;height:100%;padding:20px 20px;-webkit-box-shadow:0px 0px 20px 4px rgba(0,0,0,0.75);box-shadow:0px 0px 20px 4px rgba(0,0,0,0.75)}.block h2{color:white;width:100%;margin-top:5px;height:10%;text-align:center}.block p{font-size:0.8em;color:white;opacity:0.7}.bitcoin-chart{height:85%}.bitcoin-chart .ct-series-a .ct-line{stroke:#F7F06D}.bitcoin-chart .ct-series-a .ct-point{stroke:#F7F06D}.bitcoin-chart .ct-area{fill:#F7F06D}.bitcoin-chart .ct-legend{display:-webkit-box;display:-ms-flexbox;display:flex;width:100%;-ms-flex-pack:distribute;justify-content:space-around;color:white}.bitcoin-chart .ct-line{stroke-dasharray:5px;-webkit-animation:dashoffset 2s linear infinite;animation:dashoffset 2s linear infinite}.bitcoin-chart span.ct-label.ct-horizontal.ct-end{font-size:0.5em}.bitcoin-chart text.ct-label{fill:#F7F06D;font-size:0.7em}.bar-chart{height:85%}.bar-chart .ct-bar{stroke-width:45px}.bar-chart .ct-series-a line{stroke:#F7F06D;-webkit-animation:ctSeriesAGlow 3s linear infinite;animation:ctSeriesAGlow 3s linear infinite}.bar-chart .ct-series-b line{stroke:#FAF59E;-webkit-animation:ctSeriesBGlow 3s linear infinite;animation:ctSeriesBGlow 3s linear infinite}.bar-chart .ct-series-c line{stroke:#FCF9C5;-webkit-animation:ctSeriesCGlow 3s linear infinite;animation:ctSeriesCGlow 3s linear infinite}@-webkit-keyframes ctSeriesAGlow{0%,100%{-webkit-filter:drop-shadow(0px 0px 10px rgba(247,240,109,0.2));filter:drop-shadow(0px 0px 10px rgba(247,240,109,0.2))}50%{-webkit-filter:drop-shadow(0px 0px 10px #f7f06d);filter:drop-shadow(0px 0px 10px #f7f06d)}}@keyframes ctSeriesAGlow{0%,100%{-webkit-filter:drop-shadow(0px 0px 10px rgba(247,240,109,0.2));filter:drop-shadow(0px 0px 10px rgba(247,240,109,0.2))}50%{-webkit-filter:drop-shadow(0px 0px 10px #f7f06d);filter:drop-shadow(0px 0px 10px #f7f06d)}}@-webkit-keyframes ctSeriesBGlow{0%,100%{-webkit-filter:drop-shadow(0px 0px 10px rgba(250,245,158,0.2));filter:drop-shadow(0px 0px 10px rgba(250,245,158,0.2))}50%{-webkit-filter:drop-shadow(0px 0px 10px #faf59e);filter:drop-shadow(0px 0px 10px #faf59e)}}@keyframes ctSeriesBGlow{0%,100%{-webkit-filter:drop-shadow(0px 0px 10px rgba(250,245,158,0.2));filter:drop-shadow(0px 0px 10px rgba(250,245,158,0.2))}50%{-webkit-filter:drop-shadow(0px 0px 10px #faf59e);filter:drop-shadow(0px 0px 10px #faf59e)}}@-webkit-keyframes ctSeriesCGlow{0%,100%{-webkit-filter:drop-shadow(0px 0px 10px rgba(252,249,197,0.2));filter:drop-shadow(0px 0px 10px rgba(252,249,197,0.2))}50%{-webkit-filter:drop-shadow(0px 0px 10px #fcf9c5);filter:drop-shadow(0px 0px 10px #fcf9c5)}}@keyframes ctSeriesCGlow{0%,100%{-webkit-filter:drop-shadow(0px 0px 10px rgba(252,249,197,0.2));filter:drop-shadow(0px 0px 10px rgba(252,249,197,0.2))}50%{-webkit-filter:drop-shadow(0px 0px 10px #fcf9c5);filter:drop-shadow(0px 0px 10px #fcf9c5)}}@-webkit-keyframes dashoffset{0%{stroke-dashoffset:0}100%{stroke-dashoffset:-20px}}@keyframes dashoffset{0%{stroke-dashoffset:0}100%{stroke-dashoffset:-20px}}.ct-label{color:white}@media (max-width: 940px){.wrapper{width:auto;height:auto;-ms-grid-columns:90vw;grid-template-columns:90vw;-ms-grid-rows:(60vh)[4];grid-template-rows:repeat(4, 60vh)}}li{list-style-type:none}.ct-legend .ct-series-1::before{cursor:pointer}.timer{position:fixed;right:20px;bottom:20px;width:80px;height:80px;opacity:0.5;background-color:#0a0a0a;-webkit-box-shadow:0px 0px 5px 4px rgba(10,10,10,0.75);box-shadow:0px 0px 5px 4px rgba(10,10,10,0.75);border-radius:50%;border:2px solid #0a0a0a;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-animation:MoveUpDown 4s ease infinite;animation:MoveUpDown 4s ease infinite}.timer p{font-size:0.6em}.timer span{font-size:0.7em;margin-top:5px}.timer p,.timer span{color:#F7F06D}@-webkit-keyframes MoveUpDown{0%,100%{bottom:20px}50%{bottom:50px}}@keyframes MoveUpDown{0%,100%{bottom:20px}50%{bottom:50px}}hr{width:100%;position:fixed;bottom:0;left:0;border-color:#F7F06D;border-width:2px;-webkit-animation:hrLine 31s linear infinite;animation:hrLine 31s linear infinite}@-webkit-keyframes hrLine{0%{width:0%}100%{width:100%}}@keyframes hrLine{0%{width:0%}100%{width:100%}}
 /*# sourceMappingURL=style.css.map */
+
+
+
+/*Pound vs USD*/
+.container {
+    width: 100%;
+}
+
+.usd {
+    width: 50%;
+}
+
+.gbp {
+    width: 50%;
+}
+
+.pound {
+    
+}
+
+.dollar {
+    
+}
+
+.paragraph {
+    position: absolute;
+}
+
+/*SPINNING COIN*/
+img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: auto;
+    height: 100%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none
+}
+ 
+html,
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0
+}
+ 
+*,
+*:after,
+*:before {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box
+}
+ 
+.container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center
+}
+ 
+.coin-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 295px;
+    height: 295px;
+    -webkit-filter: drop-shadow(40px 30px 30px rgba(7, 14, 29, 0.4));
+    filter: drop-shadow(40px 30px 30px rgba(7, 14, 29, 0.4))
+}
+ 
+.coin {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    -webkit-animation: token-rotate 4s infinite linear;
+    animation: token-rotate 4s infinite linear               /*change speed here*/
+}
+ 
+.coin:before,
+.coin:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: -webkit-gradient(linear, left bottom, left top, from(#000), to(#000));
+    background: linear-gradient(0deg, #000, #000);
+    border-radius: 50%;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d
+}
+ 
+.coin::before {
+    -webkit-transform: translate3d(-50%, 0, calc((10px / 2) - 1px));
+    transform: translate3d(-50%, 0, calc((10px / 2) - 1px))
+}
+ 
+.coin::after {
+    -webkit-transform: translate3d(-50%, 0, calc((10px / -2) + 1px)) rotateY(180deg);
+    transform: translate3d(-50%, 0, calc((10px / -2) + 1px)) rotateY(180deg)
+}
+ 
+.coin__side {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    z-index: 10
+}
+ 
+.coin__side--front {
+    -webkit-transform: translate3d(-50%, 0, calc(10px / 2));
+    transform: translate3d(-50%, 0, calc(10px / 2))
+}
+ 
+.coin__side--back {
+    -webkit-transform: translate3d(-50%, 0, calc(10px / -2)) rotateY(180deg);
+    transform: translate3d(-50%, 0, calc(10px / -2)) rotateY(180deg)
+}
+ 
+.coin__image {
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    
+    border-radius: 50%
+}
+
+.coin__side--back .coin__image {
+    background-color: #ffa500;            /*change colour*/
+}
+
+.coin__side--front .coin__image{
+    background-color: #ffa500;            /*change colour*/
+}
+
+.coin__edge {
+    position: absolute;
+    min-height: 100%;
+    min-width: 10px;
+    background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(1%, transparent), color-stop(1%, #000), color-stop(99%, #000), color-stop(99%, transparent), to(transparent));
+    background: linear-gradient(90deg, transparent, transparent 1%, #000 1%, #000 99%, transparent 99%, transparent 100%);
+    background-repeat: no-repeat;
+    border-left: 1px inset transparent;
+    border-right: 1px inset transparent;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform: rotateY(90deg);
+    transform: rotateY(90deg);
+    z-index: 20
+}
+ 
+@-webkit-keyframes token-rotate {
+    0% {
+        -webkit-transform: rotateY(0deg);
+        transform: rotateY(0deg)
+    }
+ 
+    100% {
+        -webkit-transform: rotateY(-360deg);
+        transform: rotateY(-360deg)        
+    }
+}
+ 
+@keyframes token-rotate {
+    0% {
+        -webkit-transform: rotateY(0deg);
+        transform: rotateY(0deg)
+    }
+ 
+    100% {
+        -webkit-transform: rotateY(-360deg);              /*change rotation*/
+        transform: rotateY(-360deg)
+    }
+}
